--- a/style.css
+++ b/style.css
@@ -48,11 +48,11 @@
   border: 2px solid transparent;
 }
 
-.anim:hover {
-  width: 95px;
-  height: 95px;
-  background-color: black;
-  border-radius: 50%;
-  margin: 5px auto;
-  border: 2px solid transparent;
+@keyframes example {
+  from {
+    background-color: red;
+  }
+  to {
+    background-color: yellow;
+  }
 }
